<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res‐auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/tvFromDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:text="From: "
        android:textSize="24sp"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etFromDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:focusable="true"
        android:textSize="24sp"
        app2:layout_constraintEnd_toEndOf="parent"
        app2:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor"
        android:inputType="TODO"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvToDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:text="To: "
        android:textSize="24sp"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/tvFromDateTime" />

    <EditText
        android:id="@+id/etToDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:textSize="24sp"
        app2:layout_constraintStart_toStartOf="@+id/etFromDateTime"
        app2:layout_constraintTop_toTopOf="@+id/etFromDateTime"
        tools:ignore="LabelFor"
        android:inputType="TODO"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvKeywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="Keywords: "
        android:textSize="24sp"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/BottomRight" />

    <EditText
        android:id="@+id/etKeywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:textSize="24sp"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/tvKeywords"
        tools:ignore="LabelFor"
        android:inputType="TODO"
        android:autofillHints="" />

    <EditText
        android:id="@+id/topLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:textSize="24sp"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="LabelFor"
        android:inputType="TODO"
        android:autofillHints="" />

    <EditText
        android:id="@+id/BottomRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:textSize="24sp"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="LabelFor"
        android:inputType="TODO"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancel"
        android:text="Cancel"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:onClick="go"
        android:text="Go"
        app2:layout_constraintBottom_toBottomOf="parent"
        app2:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="Top Left (Lat, Lng): "
        android:textSize="24sp"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/etToDateTime" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="Bottom Right (Lat, Lng) : "
        android:textSize="24sp"
        app2:layout_constraintStart_toStartOf="parent"
        app2:layout_constraintTop_toBottomOf="@+id/topLeft" />
</androidx.constraintlayout.widget.ConstraintLayout>